update gallery page

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -163,34 +163,20 @@
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
+										<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
 										<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
 									</div>
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
-										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
 									</div>
 								</div>
-								<div class="gallery__slide swiper-slide">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
-									</div>
-								</div>
-								<div class="gallery__slide swiper-slide">
-									<div class="gallery__image-wrap">
-										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
-									</div>
-								</div>
-								<div class="gallery__slide swiper-slide">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
-									</div>
-								</div>
-								<div class="gallery__slide swiper-slide">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
-									</div>
-								</div>
+
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
 										<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
@@ -203,34 +189,20 @@
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
+										<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
 										<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
 									</div>
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
-										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
 									</div>
 								</div>
-								<div class="gallery__slide swiper-slide">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
-									</div>
-								</div>
-								<div class="gallery__slide swiper-slide">
-									<div class="gallery__image-wrap">
-										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
-									</div>
-								</div>
-								<div class="gallery__slide swiper-slide">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
-									</div>
-								</div>
-								<div class="gallery__slide swiper-slide">
-									<div class="gallery__image-wrap">
-										<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
-									</div>
-								</div>
+
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
 										<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
@@ -243,32 +215,69 @@
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
+										<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
 										<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
 									</div>
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
-										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
+									</div>
+								</div>
+
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
 									</div>
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
-										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+										<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
 									</div>
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
-										<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+										<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
 									</div>
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
-										<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+										<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
 									</div>
 								</div>
 								<div class="gallery__slide swiper-slide">
 									<div class="gallery__image-wrap">
-										<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
+										<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
+									</div>
+								</div>
+
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
+									</div>
+								</div>
+								<div class="gallery__slide swiper-slide">
+									<div class="gallery__image-wrap">
+										<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
 									</div>
 								</div>
 							</div>
@@ -302,34 +311,20 @@
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
+											<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
 											<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
 										</div>
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
-											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+											<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
 										</div>
 									</div>
-									<div class="gallery__thumb swiper-slide">
-										<div class="gallery__image-wrap">
-											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
-										</div>
-									</div>
-									<div class="gallery__thumb swiper-slide">
-										<div class="gallery__image-wrap">
-											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
-										</div>
-									</div>
-									<div class="gallery__thumb swiper-slide">
-										<div class="gallery__image-wrap">
-											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
-										</div>
-									</div>
-									<div class="gallery__thumb swiper-slide">
-										<div class="gallery__image-wrap">
-											<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
-										</div>
-									</div>
+
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
 											<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
@@ -342,34 +337,20 @@
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
+											<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
 											<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
 										</div>
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
-											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+											<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
 										</div>
 									</div>
-									<div class="gallery__thumb swiper-slide">
-										<div class="gallery__image-wrap">
-											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
-										</div>
-									</div>
-									<div class="gallery__thumb swiper-slide">
-										<div class="gallery__image-wrap">
-											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
-										</div>
-									</div>
-									<div class="gallery__thumb swiper-slide">
-										<div class="gallery__image-wrap">
-											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
-										</div>
-									</div>
-									<div class="gallery__thumb swiper-slide">
-										<div class="gallery__image-wrap">
-											<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
-										</div>
-									</div>
+
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
 											<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
@@ -382,32 +363,69 @@
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
+											<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
 											<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
 										</div>
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
-											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+											<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
+										</div>
+									</div>
+
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
 										</div>
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
-											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+											<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
 										</div>
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
-											<img src="img/content/20900078411.webp" class="gallery__image" alt="" />
+											<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
 										</div>
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
-											<img src="img/content/2090007842.webp" class="gallery__image" alt="" />
+											<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
 										</div>
 									</div>
 									<div class="gallery__thumb swiper-slide">
 										<div class="gallery__image-wrap">
-											<img src="img/content/2090007851.webp" class="gallery__image" alt="" />
+											<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
+										</div>
+									</div>
+
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21331327188.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/21314327180.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="img/content/2090007843.webp" class="gallery__image" alt="" />
+										</div>
+									</div>
+									<div class="gallery__thumb swiper-slide">
+										<div class="gallery__image-wrap">
+											<img src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg" class="gallery__image" alt="" />
 										</div>
 									</div>
 								</div>
