--- a/src/html/gallery.htm
+++ b/src/html/gallery.htm
@@ -23,6 +23,15 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
+              src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
               src="@img/content/2090007843.webp"
               class="gallery__image"
               alt=""
@@ -32,48 +41,13 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
-              src="@img/content/20900078411.webp"
+              src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
               class="gallery__image"
               alt=""
             />
           </div>
         </div>
-        <div class="gallery__slide swiper-slide">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007842.webp"
-              class="gallery__image"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="gallery__slide swiper-slide">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/20900078411.webp"
-              class="gallery__image"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="gallery__slide swiper-slide">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007842.webp"
-              class="gallery__image"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="gallery__slide swiper-slide">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007851.webp"
-              class="gallery__image"
-              alt=""
-            />
-          </div>
-        </div>
+
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
@@ -95,6 +69,15 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
+              src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
               src="@img/content/2090007843.webp"
               class="gallery__image"
               alt=""
@@ -104,48 +87,13 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
-              src="@img/content/20900078411.webp"
+              src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
               class="gallery__image"
               alt=""
             />
           </div>
         </div>
-        <div class="gallery__slide swiper-slide">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007842.webp"
-              class="gallery__image"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="gallery__slide swiper-slide">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/20900078411.webp"
-              class="gallery__image"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="gallery__slide swiper-slide">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007842.webp"
-              class="gallery__image"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="gallery__slide swiper-slide">
-          <div class="gallery__image-wrap">
-            <img
-              src="@img/content/2090007851.webp"
-              class="gallery__image"
-              alt=""
-            />
-          </div>
-        </div>
+
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
@@ -167,6 +115,15 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
+              src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
               src="@img/content/2090007843.webp"
               class="gallery__image"
               alt=""
@@ -176,7 +133,17 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
-              src="@img/content/20900078411.webp"
+              src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/21331327188.webp"
               class="gallery__image"
               alt=""
             />
@@ -185,7 +152,7 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
-              src="@img/content/2090007842.webp"
+              src="@img/content/21314327180.webp"
               class="gallery__image"
               alt=""
             />
@@ -194,7 +161,7 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
-              src="@img/content/20900078411.webp"
+              src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
               class="gallery__image"
               alt=""
             />
@@ -203,7 +170,7 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
-              src="@img/content/2090007842.webp"
+              src="@img/content/2090007843.webp"
               class="gallery__image"
               alt=""
             />
@@ -212,7 +179,53 @@
         <div class="gallery__slide swiper-slide">
           <div class="gallery__image-wrap">
             <img
-              src="@img/content/2090007851.webp"
+              src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/21331327188.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/21314327180.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="@img/content/2090007843.webp"
+              class="gallery__image"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="gallery__slide swiper-slide">
+          <div class="gallery__image-wrap">
+            <img
+              src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
               class="gallery__image"
               alt=""
             />
@@ -256,6 +269,15 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
+                src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
                 src="@img/content/2090007843.webp"
                 class="gallery__image"
                 alt=""
@@ -265,48 +287,13 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
-                src="@img/content/20900078411.webp"
+                src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
                 class="gallery__image"
                 alt=""
               />
             </div>
           </div>
-          <div class="gallery__thumb swiper-slide">
-            <div class="gallery__image-wrap">
-              <img
-                src="@img/content/2090007842.webp"
-                class="gallery__image"
-                alt=""
-              />
-            </div>
-          </div>
-          <div class="gallery__thumb swiper-slide">
-            <div class="gallery__image-wrap">
-              <img
-                src="@img/content/20900078411.webp"
-                class="gallery__image"
-                alt=""
-              />
-            </div>
-          </div>
-          <div class="gallery__thumb swiper-slide">
-            <div class="gallery__image-wrap">
-              <img
-                src="@img/content/2090007842.webp"
-                class="gallery__image"
-                alt=""
-              />
-            </div>
-          </div>
-          <div class="gallery__thumb swiper-slide">
-            <div class="gallery__image-wrap">
-              <img
-                src="@img/content/2090007851.webp"
-                class="gallery__image"
-                alt=""
-              />
-            </div>
-          </div>
+
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
@@ -328,6 +315,15 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
+                src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
                 src="@img/content/2090007843.webp"
                 class="gallery__image"
                 alt=""
@@ -337,48 +333,13 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
-                src="@img/content/20900078411.webp"
+                src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
                 class="gallery__image"
                 alt=""
               />
             </div>
           </div>
-          <div class="gallery__thumb swiper-slide">
-            <div class="gallery__image-wrap">
-              <img
-                src="@img/content/2090007842.webp"
-                class="gallery__image"
-                alt=""
-              />
-            </div>
-          </div>
-          <div class="gallery__thumb swiper-slide">
-            <div class="gallery__image-wrap">
-              <img
-                src="@img/content/20900078411.webp"
-                class="gallery__image"
-                alt=""
-              />
-            </div>
-          </div>
-          <div class="gallery__thumb swiper-slide">
-            <div class="gallery__image-wrap">
-              <img
-                src="@img/content/2090007842.webp"
-                class="gallery__image"
-                alt=""
-              />
-            </div>
-          </div>
-          <div class="gallery__thumb swiper-slide">
-            <div class="gallery__image-wrap">
-              <img
-                src="@img/content/2090007851.webp"
-                class="gallery__image"
-                alt=""
-              />
-            </div>
-          </div>
+
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
@@ -400,6 +361,15 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
+                src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
                 src="@img/content/2090007843.webp"
                 class="gallery__image"
                 alt=""
@@ -409,7 +379,17 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
-                src="@img/content/20900078411.webp"
+                src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21331327188.webp"
                 class="gallery__image"
                 alt=""
               />
@@ -418,7 +398,7 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
-                src="@img/content/2090007842.webp"
+                src="@img/content/21314327180.webp"
                 class="gallery__image"
                 alt=""
               />
@@ -427,7 +407,7 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
-                src="@img/content/20900078411.webp"
+                src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
                 class="gallery__image"
                 alt=""
               />
@@ -436,7 +416,7 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
-                src="@img/content/2090007842.webp"
+                src="@img/content/2090007843.webp"
                 class="gallery__image"
                 alt=""
               />
@@ -445,7 +425,53 @@
           <div class="gallery__thumb swiper-slide">
             <div class="gallery__image-wrap">
               <img
-                src="@img/content/2090007851.webp"
+                src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21331327188.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/21314327180.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="https://parivision.gg/upload/iblock/cf6/dpctufsyklg5t1ascnsuw0er0a66loz2.jpg"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="@img/content/2090007843.webp"
+                class="gallery__image"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="gallery__thumb swiper-slide">
+            <div class="gallery__image-wrap">
+              <img
+                src="https://parivision.gg/upload/iblock/afa/gy80i0x6y1y7ov3qv2q4mtgwwdrp70x4.jpg"
                 class="gallery__image"
                 alt=""
               />
